# github-policy-dashboard

./: .dockerignore  .gitignore  404.html  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  github_audit_dashboard_requirements.md  index.html  mkdocs.yml  mkdocs_requirements.txt  objects.inv  pyproject.toml  rulemap.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy_mkdocs.yml  md_lint.yml
.streamlit/: config.toml
aws_lambda/: Dockerfile  README.md  main.py  policy_checks.py  requirements.txt
aws_lambda/terraform/: .terraform.lock.hcl  data.tf  main.tf  providers.tf
aws_lambda/terraform/env/dev/: backend-dev.tfbackend
aws_lambda/terraform/env/sandbox/: example_tfvars.txt
concourse/: ci.yml  ci_prod.yml
concourse/scripts/: assume_role.sh  build_image.sh  policy_util.sh  set_pipeline.sh  terraform_infra.sh
dashboard/: index.html
dashboard/repository_information/: index.html
dashboard/rulemap/: index.html
data_logger/: Dockerfile  README.md  custom_threading.py  index.html  logger.py  main.py  pyproject.toml
data_logger/config/: config.json
data_logger/configuration/: index.html
data_logger/dependabot/: index.html
data_logger/repositories/: index.html
data_logger/secret_scanning/: index.html
data_logger/src/: main.py  policy_checks.py
data_logger/threading/: index.html
diagrams/: architecture.drawio
docs/: documentation.md  index.md  initial_scoping.md  scorecard_designs.md  screen_designs.md
docs/dashboard/: index.md  repository_information.md  rulemap.md
docs/data_logger/: configuration.md  dependabot.md  index.md  repositories.md  secret_scanning.md  threading.md
documentation/: index.html
lambda/: README.md  main.py  policy_checks.py  requirements.txt
lambda_data_logger/: Dockerfile  README.md  initial_run.py  main.py  policy_checks.py
lambda_data_logger/config/: config.json
mkdocs_deployment/: 404.html  index.html
mkdocs_deployment/documentation/: index.html
mkdocs_deployment/initial_scoping/: index.html
mkdocs_deployment/screen_designs/: index.html
mkdocs_deployment/search/: search_index.json
search/: search_index.json
shell_scripts/: md_fix.sh  md_lint.sh
src/: api_interface.py  app.py  main.py  policy_checks.py  refresh_data.py  utilities.py
src/dependabot/: collection.py  dependabot.py  formatting.py
src/repositories/: collection.py  formatting.py  repositories.py
src/secret_scanning/: collection.py  formatting.py  secret_scanning.py
terraform/authentication/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/authentication/env/dev/: backend-dev.tfbackend  example_tfvars.txt
terraform/authentication/env/prod/: backend-prod.tfbackend
terraform/authentication/env/sandbox/: backend-sandbox.tfbackend  example_tfvars.txt
terraform/dashboard/: .terraform.lock.hcl  README.md  alb.tf  data.tf  main.tf  outputs.tf  variables.tf
terraform/dashboard/env/dev/: backend-dev.tfbackend  example_tfvars.txt
terraform/dashboard/env/sandbox/: backend-sandbox.tfbackend  example_tfvars.txt
terraform/data_logger/: data.tf  eventbridge.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/data_logger/env/dev/: backend-dev.tfbackend  example_tfvars.txt
terraform/data_logger/env/prod/: backend-prod.tfbackend
terraform/data_logger/env/sandbox/: backend-sandbox.tfbackend  example_tfvars.txt
terraform/service/: README.md  alb.tf  dns.tf  providers.tf  security.tf
terraform/service/env/prod/: backend-prod.tfbackend
terraform/service/env/sandbox/: example_tfvars.txt
tests/dashboard/: test_get_table_from_s3.py  test_load_data.py
