[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kieran Pritchard <kieran.pritchard@ons.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
boto3 = "^1.34.135"
pandas = "^2.2.2"
plotly = "^5.22.0"
black = "^24.8.0"
ruff = "^0.6.5"
pylint = "^3.2.7"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
